<resources>
    <string name="app_name">Учет бюджета</string>
    <string name="name_hint">Название</string>
    <string name="price_hint">0</string>
    <string name="ruble">P</string>
    <string name="ruble21">₽</string>
    <string name="plus">+</string>
    <string name="new_entry">Новая запись</string>
    <string name="costs">Расходы</string>
    <string name="budget_accounting">Учет бюджета</string>
    <string name="income">доходы</string>
    <string name="balance">Баланс</string>
    <string name="error">Ошибка</string>
    <string name="delete_items">Удалить эти элементы?</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="image">image</string>
    <string name="about">Ваш незаменимый помощник \nв управлении бюджетом</string>
    <string name="expense">расход</string>
    <string name="your_balance">ваш баланс</string>
    <string name="price">%1$d \u20bd</string>
</resources>
